--- a/sundance.service
+++ b/sundance.service
@@ -3,7 +3,7 @@ Description=Sundance
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/python3 -u sundance.python3
+ExecStart=/usr/bin/python3 -u sundance.py
 WorkingDirectory=/home/github/Discord-Bot
 StandardOutput=inherit
 StandardError=inherit
