Split requirements files

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,10 @@ appdirs
 asn1crypto
 async-timeout
 discord.py
-google-api-core
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-cloud-core
-google-cloud-error-reporting
-google-cloud-logging
-google-python-cloud-debugger
-googleapis-common-protos
 mysql-connector-python==8.0.12
 numpy
 pandas
 python-dateutil
 python-dotenv
 requests
-requests-toolbelt
+requests-toolbeltm
